stat offf cal in door

--- a/CallInDoor/CallInDoor/appsettings.json
+++ b/CallInDoor/CallInDoor/appsettings.json
@@ -2,6 +2,9 @@
   "ConnectionStrings": {
     "DefaultConnection": "Data Source=91.98.28.79;Initial Catalog=CallInDoor;Persist Security Info=True;User ID=sa;Password=Afagh123456@"
   },
+  "AppSettings": {
+    "Secret": "This is the secret key and its very important"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
