--- a/client-app/package.json
+++ b/client-app/package.json
@@ -25,6 +25,7 @@
     "intl-messageformat": "^7.8.4",
     "jquery": "~3.4.1",
     "jsonwebtoken": "~8.5.1",
+    "jwt-decode": "^3.0.0-beta.2",
     "leaflet": "^1.6.0",
     "match-sorter": "~4.0.2",
     "moment": "~2.24.0",
@@ -92,6 +93,13 @@
     "extends": "react-app"
   },
   "devDependencies": {
+    "eslint": "^7.9.0",
+    "eslint-config-standard": "^14.1.1",
+    "eslint-plugin-import": "^2.22.0",
+    "eslint-plugin-node": "^11.1.0",
+    "eslint-plugin-promise": "^4.2.1",
+    "eslint-plugin-react": "^7.20.6",
+    "eslint-plugin-standard": "^4.0.1",
     "node-sass": "^4.13.1",
     "react-app-rewire-postcss": "^3.0.2",
     "react-app-rewired": "^2.1.5"
