--- a/client-app/package.json
+++ b/client-app/package.json
@@ -46,6 +46,8 @@
     "react-copy-to-clipboard": "~5.0.2",
     "react-countdown-now": "~2.1.2",
     "react-country-flag": "^2.0.1",
+    "react-data-component": "^1.0.1",
+    "react-data-components": "^1.2.0",
     "react-data-table-component": "^6.2.3",
     "react-dom": "^16.12.0",
     "react-draft-wysiwyg": "^1.14.4",
