--- a/client-app/package.json
+++ b/client-app/package.json
@@ -23,6 +23,7 @@
     "formik": "^2.1.3",
     "history": "^4.10.1",
     "intl-messageformat": "^7.8.4",
+    "joi-browser": "^13.4.0",
     "jquery": "~3.4.1",
     "jsonwebtoken": "~8.5.1",
     "jwt-decode": "^3.0.0-beta.2",
