--- a/client-app/package.json
+++ b/client-app/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "@auth0/auth0-spa-js": "^1.6.3",
+    "@pathofdev/react-tag-input": "^1.0.7",
     "ag-grid-community": "^22.1.1",
     "ag-grid-react": "^22.1.1",
     "apexcharts": "^3.15.3",
@@ -40,6 +41,7 @@
     "react-apexcharts": "^1.3.6",
     "react-beautiful-dnd": "^12.2.0",
     "react-big-calendar": "^0.24.0",
+    "react-block-ui": "^1.3.3",
     "react-bootstrap-sweetalert": "^5.1.9",
     "react-chartjs": "^1.2.0",
     "react-chartjs-2": "^2.9.0",
@@ -50,6 +52,7 @@
     "react-data-component": "^1.0.1",
     "react-data-components": "^1.2.0",
     "react-data-table-component": "^6.2.3",
+    "react-dnd": "^5.0.0",
     "react-dom": "^16.12.0",
     "react-draft-wysiwyg": "^1.14.4",
     "react-dropzone": "^10.2.1",
@@ -72,6 +75,7 @@
     "react-select": "~3.0.8",
     "react-sidebar": "~3.0.2",
     "react-table": "~6.10.0",
+    "react-tag-input": "^6.4.3",
     "react-toastify": "^5.5.0",
     "react-toggle": "~4.1.1",
     "react-treebeard": "~3.2.3",
