--- a/CallInDoor/Service/Service.csproj
+++ b/CallInDoor/Service/Service.csproj
@@ -24,6 +24,9 @@
     <EmbeddedResource Update="AccountService.fa-IR.resx">
       <Generator>PublicResXFileCodeGenerator</Generator>
     </EmbeddedResource>
+    <EmbeddedResource Update="ServiceService.fa-IR.resx">
+      <Generator>PublicResXFileCodeGenerator</Generator>
+    </EmbeddedResource>
   </ItemGroup>
 
 </Project>
