adding add vcours egoing to do

--- a/CallInDoor/Domain/Domain.csproj
+++ b/CallInDoor/Domain/Domain.csproj
@@ -62,6 +62,18 @@
     <EmbeddedResource Update="DTO\Account\UpdateProfileDTO.fa-IR.resx">
       <Generator>PublicResXFileCodeGenerator</Generator>
     </EmbeddedResource>
+    <EmbeddedResource Update="DTO\Service\AddCourseTopic.en-US.resx">
+      <Generator>PublicResXFileCodeGenerator</Generator>
+    </EmbeddedResource>
+    <EmbeddedResource Update="DTO\Service\AddCourseTopic.fa-IR.resx">
+      <Generator>PublicResXFileCodeGenerator</Generator>
+    </EmbeddedResource>
+    <EmbeddedResource Update="DTO\Service\AddCourseServiceForUsersDTO.en-US.resx">
+      <Generator>PublicResXFileCodeGenerator</Generator>
+    </EmbeddedResource>
+    <EmbeddedResource Update="DTO\Service\AddCourseServiceForUsersDTO.fa-IR.resx">
+      <Generator>PublicResXFileCodeGenerator</Generator>
+    </EmbeddedResource>
     <EmbeddedResource Update="DTO\Service\AddServiceServiceForUsersDTO.en-US.resx">
       <Generator>PublicResXFileCodeGenerator</Generator>
     </EmbeddedResource>
