--- a/CallInDoor/CallInDoor/CallInDoor.csproj
+++ b/CallInDoor/CallInDoor/CallInDoor.csproj
@@ -50,6 +50,8 @@
   </ItemGroup>
 
   <ItemGroup>
+    <Folder Include="wwwroot\Upload\CoursePreview\" />
+    <Folder Include="wwwroot\Upload\Topics\" />
     <Folder Include="wwwroot\Upload\User\" />
   </ItemGroup>
 
