add some chaneges

--- a/client-app/.eslintrc.json
+++ b/client-app/.eslintrc.json
@@ -1,25 +1,20 @@
 {
-    "env": {
-        "browser": true,
-        "es2021": true
-        },
-    "extends": [
-        "plugin:react/recommended",
-        "standard"
-    ],
-    "parserOptions": {
-        "ecmaFeatures": {
-            "jsx": true
-        },
-        "ecmaVersion": 12,
-        "sourceType": "module"
+  "env": {
+    "browser": true,
+    "es2021": true
+  },
+  "extends": ["plugin:react/recommended", "standard"],
+  "parserOptions": {
+    "ecmaFeatures": {
+      "jsx": true
     },
-    "plugins": [
-        "react"
-    ],
-    "rules": {
-    "quotes":["error","double" ],
+    "ecmaVersion": 12,
+    "sourceType": "module"
+  },
+  "plugins": ["react"],
+  "rules": {
+    "quotes": ["error", "double"],
     "semi": ["error", "always"],
-    "react/prop-types":"off"
-    }
+    "react/prop-types": "off"
+  }
 }
