going to add role

--- a/client-app/.eslintrc.json
+++ b/client-app/.eslintrc.json
@@ -13,6 +13,7 @@
   },
   "plugins": ["react"],
   "rules": {
+    "indent": "off",
     "quotes": ["error", "double"],
     "semi": ["error", "always"],
     "react/prop-types": "off"
