adding permission table

--- a/CallInDoor/CallInDoor/CallInDoor.csproj
+++ b/CallInDoor/CallInDoor/CallInDoor.csproj
@@ -14,6 +14,7 @@
 
   <ItemGroup>
     <Compile Remove="Config\Middleware\ErrorHandlingMiddleware.cs" />
+    <Compile Remove="Config\Permissions\PublicPermissions.cs" />
   </ItemGroup>
 
   <ItemGroup>
