--- a/client-app/.eslintrc.json
+++ b/client-app/.eslintrc.json
@@ -3,7 +3,10 @@
     "browser": true,
     "es2021": true
   },
-  "extends": ["plugin:react/recommended", "standard"],
+  "extends": [
+    "plugin:react/recommended",
+    "standard"
+  ],
   "parserOptions": {
     "ecmaFeatures": {
       "jsx": true
@@ -11,11 +14,20 @@
     "ecmaVersion": 12,
     "sourceType": "module"
   },
-  "plugins": ["react"],
+  "plugins": [
+    "react"
+  ],
   "rules": {
     "indent": "off",
-    "quotes": ["error", "double"],
-    "semi": ["error", "always"],
+    "quotes": [
+      "error",
+      "double"
+    ],
+    "semi": [
+      "error",
+      "always"
+    ],
+    "comma-dangle": "off",
     "react/prop-types": "off"
   }
 }
