profile with very bug

--- a/CallInDoor/CallInDoor/CallInDoor.csproj
+++ b/CallInDoor/CallInDoor/CallInDoor.csproj
@@ -52,6 +52,7 @@
 
   <ItemGroup>
     <Folder Include="wwwroot\Upload\CoursePreview\" />
+    <Folder Include="wwwroot\Upload\ProfileCertificate\" />
     <Folder Include="wwwroot\Upload\Topics\" />
     <Folder Include="wwwroot\Upload\User\" />
   </ItemGroup>
