adding language api finished

--- a/CallInDoor/Domain/Domain.csproj
+++ b/CallInDoor/Domain/Domain.csproj
@@ -117,17 +117,19 @@
     <EmbeddedResource Update="DTO\Tiket\AddChatMessageToTicketInUserDTO.fa-IR.resx">
       <Generator>PublicResXFileCodeGenerator</Generator>
     </EmbeddedResource>
-    <EmbeddedResource Update="ShareResource.fr-CH.resx">
-      <Generator>ResXFileCodeGenerator</Generator>
-      <LastGenOutput>ShareResource.fr-CH.Designer.cs</LastGenOutput>
+    <EmbeddedResource Update="ShareResource.ar.resx">
+      <Generator>PublicResXFileCodeGenerator</Generator>
+      <LastGenOutput>ShareResource.ar.Designer.cs</LastGenOutput>
     </EmbeddedResource>
     <EmbeddedResource Update="ShareResource.en-US.resx">
       <SubType>Designer</SubType>
       <Generator>PublicResXFileCodeGenerator</Generator>
+      <LastGenOutput>ShareResource.en-US.Designer.cs</LastGenOutput>
     </EmbeddedResource>
     <EmbeddedResource Update="ShareResource.fa-IR.resx">
       <SubType>Designer</SubType>
       <Generator>PublicResXFileCodeGenerator</Generator>
+      <LastGenOutput>ShareResource.fa-IR.Designer.cs</LastGenOutput>
     </EmbeddedResource>
     <EmbeddedResource Update="test\test.en-US.resx">
       <Generator>PublicResXFileCodeGenerator</Generator>
@@ -166,10 +168,20 @@
       <AutoGen>True</AutoGen>
       <DependentUpon>AddCommentServiceDTO.fa-IR.resx</DependentUpon>
     </Compile>
-    <Compile Update="ShareResource.fr-CH.Designer.cs">
+    <Compile Update="ShareResource.en-US.Designer.cs">
       <DesignTime>True</DesignTime>
       <AutoGen>True</AutoGen>
-      <DependentUpon>ShareResource.fr-CH.resx</DependentUpon>
+      <DependentUpon>ShareResource.en-US.resx</DependentUpon>
+    </Compile>
+    <Compile Update="ShareResource.fa-IR.Designer.cs">
+      <DesignTime>True</DesignTime>
+      <AutoGen>True</AutoGen>
+      <DependentUpon>ShareResource.fa-IR.resx</DependentUpon>
+    </Compile>
+    <Compile Update="ShareResource.ar.Designer.cs">
+      <DesignTime>True</DesignTime>
+      <AutoGen>True</AutoGen>
+      <DependentUpon>ShareResource.ar.resx</DependentUpon>
     </Compile>
   </ItemGroup>
   <PropertyGroup>
