--- a/CallInDoor/CallInDoor/appsettings.json
+++ b/CallInDoor/CallInDoor/appsettings.json
@@ -1,9 +1,10 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Data Source=91.98.28.79;Initial Catalog=CallInDoor;Persist Security Info=True;User ID=sa;Password=Afagh123456@"
+    //"DefaultConnection": "Data Source=91.98.28.79;Initial Catalog=CallInDoor;Persist Security Info=True;User ID=sa;Password=Afagh123456@"
+    "DefaultConnection": "Data Source=91.98.28.79;Initial Catalog=CallInDoorVersionNew;Persist Security Info=True;User ID=sa;Password=Afagh123456@"
   },
   "AppSettings": {
-    "Secret": "This is the secret key of ( callndoor ) and its very important"
+    "Secret": "This is the secret key of ( callndoor ) and its very important  "
   },
   "Logging": {
     "LogLevel": {
