--- a/CallInDoor/CallInDoor/appsettings.json
+++ b/CallInDoor/CallInDoor/appsettings.json
@@ -1,7 +1,7 @@
 {
   "ConnectionStrings": {
-    //"DefaultConnection": "Data Source=91.98.28.79;Initial Catalog=CallInDoor;Persist Security Info=True;User ID=sa;Password=Afagh123456@"
-    "DefaultConnection": "Data Source=91.98.28.79;Initial Catalog=CallInDoorVersionNew;Persist Security Info=True;User ID=sa;Password=Afagh123456@"
+    //"DefaultConnection": "Data Source=91.98.28.79;Initial Catalog=CallInDoor2;Persist Security Info=True;User ID=sa;Password=Afagh123456@"
+    "DefaultConnection": "Data Source=91.98.28.79;Initial Catalog=CallInDoorV2;Persist Security Info=True;User ID=sa;Password=Afagh123456@"
   },
   "AppSettings": {
     "Secret": "This is the secret key of ( callndoor ) and its very important  "
