--- a/CallInDoor/Domain/Domain.csproj
+++ b/CallInDoor/Domain/Domain.csproj
@@ -14,6 +14,10 @@
   <ItemGroup>
     <Compile Remove="Entities\DegreeTBL.cs" />
     <Compile Remove="Entities\UsedPeriodedChatTBL.cs" />
+    <Compile Remove="Migrations\20210510042915_initNewDB.cs" />
+    <Compile Remove="Migrations\20210510042915_initNewDB.Designer.cs" />
+    <Compile Remove="Migrations\20210519075100_adingSupplierToCartegory.cs" />
+    <Compile Remove="Migrations\20210519075100_adingSupplierToCartegory.Designer.cs" />
   </ItemGroup>
   <ItemGroup>
     <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="8.0.1" />
