--- a/CallInDoor/CallInDoor/appsettings.json
+++ b/CallInDoor/CallInDoor/appsettings.json
@@ -4,7 +4,9 @@
     //"DefaultConnection": "Data Source=91.98.28.79;Initial Catalog=CallInDoorV2;Persist Security Info=True;User ID=sa;Password=Afagh123456@"
     //"DefaultConnection": "Data Source=91.98.28.79;Initial Catalog=CallInDoorV4;Persist Security Info=True;User ID=sa;Password=Afagh123456@"
     //"DefaultConnection": "Data Source=91.98.28.79;Initial Catalog=CallInDoorV6;Persist Security Info=True;User ID=sa;Password=Afagh123456@"
-    "DefaultConnection": "Data Source=91.98.28.79;Initial Catalog=CallInDoorV7;Persist Security Info=True;User ID=sa;Password=Afagh123456@"
+    //"DefaultConnection": "Data Source=91.98.28.79;Initial Catalog=CallInDoorV7;Persist Security Info=True;User ID=sa;Password=Afagh123456@"
+    //"DefaultConnection": "Data Source=91.98.28.79;Initial Catalog=CallInDoorV10;Persist Security Info=True;User ID=sa;Password=Afagh123456@",
+    "DefaultConnection": "Data Source=91.98.28.79;Initial Catalog=CallInDoorV12;Persist Security Info=True;User ID=sa;Password=Afagh123456@"
   },
   "AppSettings": {
     "Secret": "This is the secret key of ( callndoor ) and its very important  "
