--- a/CallInDoor/Domain/Domain.csproj
+++ b/CallInDoor/Domain/Domain.csproj
@@ -14,6 +14,8 @@
   <ItemGroup>
     <Compile Remove="Entities\DegreeTBL.cs" />
     <Compile Remove="Entities\UsedPeriodedChatTBL.cs" />
+    <Compile Remove="Migrations\20210619063610_init1.cs" />
+    <Compile Remove="Migrations\20210619063610_init1.Designer.cs" />
   </ItemGroup>
   <ItemGroup>
     <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="8.0.1" />
